examples/test/testpolicy16632.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16632
  namespace: namespace403
spec:
  podSelector:
    matchLabels:
      key4: value27
      key28: value23
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key8: value36
          key7: value0
      podSelector:
        matchLabels:
          key30: value32
          key23: value2
